# bg-generation-maurer-rose

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: geometry.hpp  libsvg.hpp  main.cpp
